Hopes to fix the negotiation of dynamic RTP payload types (or at least the better part of it because I think there's still something wrong with assigning new RTP payload types in answers to reINVITE offers) and to respect the user preferences with respect to streaming media.